fixing minor layout bugs

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -372,6 +372,7 @@ select:actived {
     min-height: 100%;
     background-color: #fafafa;
     padding: 0;
+    min-width: 166px;
 }
 @media(max-width: 767px){
  .wrapper {
